--- a/ocp/ocp.css
+++ b/ocp/ocp.css
@@ -2,8 +2,8 @@
 
 /*
 	Maintainer: monsterb
-	Contact: unix.s3c (at) gmail (dot) com
-	URL: https://www.oggcastplanet.org 
+	Contact: UNIX.S3C (at) gmail (dot) com
+	URL: http://monsterb.github.io/ocp/
 	*/
 
 * { line-height: 1.5; margin: 0px; padding: 0px; }
