--- a/monsterborg.css
+++ b/monsterborg.css
@@ -2,8 +2,8 @@
 
 /*
 	Maintainer: monsterb
-	Contact: unix.s3c (at) gmail (dot) com
-	URL: https://www.monsterb.org 
+	Contact: UNIX.S3C (at) gmail (dot) com
+	URL: http://monsterb.github.io/ 
 	*/
 
 * { line-height: 1.5; margin: 0px; padding: 0px; }
