--- a/ocp/ocp.css
+++ b/ocp/ocp.css
@@ -30,7 +30,7 @@ a:visited { color: #ffffff; }
 
 
 ul {
-	list-style-type: none;
+	list-style-type: square;
 	position: relative;
 	margin-left: 1em;
 	padding-left: 0;
