--- a/ocp/ocp.css
+++ b/ocp/ocp.css
@@ -35,14 +35,14 @@ ul {
 	margin-left: 1em;
 	padding-left: 0;
 }
-
+/*
 li:before {
 	content: "\2666";
 	position: absolute;
 	left: -1em;
 	margin-right: 5px;
 }
-
+*/
 li {
 	margin: 25px 0;
 }
